Ending left side menu

--- a/index.html
+++ b/index.html
@@ -53,15 +53,22 @@
         <ul class="list-nav">
 
           <li class="item-nav">
-            <a class="link-nav" href="#">Ícone dashboard</a>
+            <a class="link-nav" href="#">
+              <i class="fas fa-tachometer-alt icon"></i>
+              dashboard
+            </a>
           </li>
 
           <li class="item-nav">
-            <a class="link-nav" href="#">Calendário</a>
+            <a class="link-nav" href="#">
+              <i class="far fa-calendar-alt icon"></i>
+              Calendário</a>
           </li>
 
           <li class="item-nav">
-            <a class="link-nav" href="#">Documentações</a>
+            <a class="link-nav link-nav-arrow" href="#">
+              <i class="fas fa-book icon"></i>
+              Documentações</a>
           </li>
           <ul class="list-nav-second">
             <li class="item-nav-second">
@@ -75,7 +82,10 @@
           </ul>
 
           <li class="item-nav">
-            <a class="link-nav" href="#">Documentações</a>
+            <a class="link-nav" href="#">
+              <i class="fas fa-cog icon"></i>
+              Configurações
+            </a>
           </li>
         </ul>
 
@@ -87,5 +97,7 @@
       <h1>Conteúdo</h1>
     </div>
   </div>
+
+  <script src="https://kit.fontawesome.com/7e5df6b213.js" crossorigin="anonymous"></script>
 </body>
 </html>
