Interaction with the menu page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="profile">
 
           <span class="profile-img">
-            <img src="img/perfil.jpeg" alt="Imagem de perfil40,05">
+            <img src="img/perfil.jpeg" alt="Imagem de perfil">
           </span>
 
           <span class="name">
@@ -70,7 +70,7 @@
               <i class="fas fa-book icon"></i>
               Documentações</a>
           </li>
-          <ul class="list-nav-second">
+          <ul class="list-nav-second hide">
             <li class="item-nav-second">
               <a href="#">Doc 1</a>
             </li>
@@ -99,5 +99,6 @@
   </div>
 
   <script src="https://kit.fontawesome.com/7e5df6b213.js" crossorigin="anonymous"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
