Refactoring menu interactions

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 
     <div class="content">
       <h1>Conteúdo</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolorum nesciunt enim architecto saepe fugiat, veniam magnam repudiandae facilis nam ullam expedita? Minus sint nisi placeat tempore ullam sequi amet.</p>
     </div>
   </div>
 
